--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "UNLICENSED",
   "private": true,
   "dependencies": {
+    "@sap-cloud-sdk/core": "^1.54.2",
     "@sap-cloud-sdk/http-client": "^2.9.0",
     "@sap/audit-logging": "^5.5.5",
     "@sap/cds": ">=5",
@@ -19,7 +20,8 @@
     "sqlite3": "^5.0.4"
   },
   "scripts": {
-    "start": "cds run"
+    "start": "cds run",
+    "deploy": "mbt build & cf deploy mta_archives/consumingApi_1.0.0.mtar"
   },
   "engines": {
     "node": "^16.15"
