--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "license": "UNLICENSED",
   "private": true,
   "dependencies": {
-    "@sap-cloud-sdk/core": "^1.54.2",
     "@sap-cloud-sdk/http-client": "^2.9.0",
     "@sap/audit-logging": "^5.5.5",
     "@sap/cds": ">=5",
@@ -21,7 +20,8 @@
   },
   "scripts": {
     "start": "cds run",
-    "deploy": "mbt build & cf deploy mta_archives/consumingApi_1.0.0.mtar"
+    "deploy": "mbt build & cf deploy mta_archives/consumingApi_1.0.0.mtar",
+    "undeploy": "cf undeploy mta_archives/consumingApi_1.0.0.mtar --delete-services --delete-service-keys -f"
   },
   "engines": {
     "node": "^16.15"
